building tweets and tweet components

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -112,8 +112,8 @@ body{
 }
 
 .tweet-avatar {
-    /*height: 70px;*/
-    /*width: 70px;*/
+    height: 70px;
+    width: 70px;
     flex: 0 0 70px;
 }
 
