--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,6 +1,6 @@
 .timeline {
-    flex: 0 0 800px;
-    font-family: "Inter", sans-serif;
-    border-left: 1px solid #2f3336;
-    border-right: 1px solid #2f3336;
-  }
+  flex: 0 0 800px;
+  border-left: 1px solid #2f3336;
+  border-right: 1px solid #2f3336;
+  margin-left: 250px;
+}
