--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,10 +5,16 @@
   background-color: #1d9bf0;
   color: white;
   font-size: 1rem;
+  text-align: center;
 }
 .button.type1 {
   padding: 0.7rem 1.5rem;
 }
 .button.type2 {
-  padding: 1rem 5rem;
+  padding: 1rem 0;
+}
+.button.type3 {
+  color: #202327;
+  background-color: white;
+  padding: 0.7rem 1.5rem;
 }
