--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,13 +1,13 @@
 .sidebar {
   position: relative;
-  display: inline-block;
 }
 .sidebar .container {
-  height: 100%;
-  position: fixed;
-  left: 0;
   display: flex;
+  position: sticky;
+  height: 100vh;
+  left: 0;
+  top: 0;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0.5rem 2rem;
+  padding: 4rem 2rem 0.5rem;
 }
