--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,6 +6,7 @@
   color: white;
   font-size: 1rem;
   text-align: center;
+  cursor: pointer;
 }
 .button.type1 {
   padding: 0.7rem 1.5rem;
@@ -18,3 +19,9 @@
   background-color: white;
   padding: 0.35rem 0.75rem;
 }
+
+/* ec442c 
+f06a6a
+f36205
+
+*/
