--- a/src/components/TweetAction/TweetAction.module.css
+++ b/src/components/TweetAction/TweetAction.module.css
@@ -10,6 +10,8 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  background-color: transparent;
+  border: none;
 }
 
 .tweetAction:hover {
