--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,14 +1,10 @@
 .sidebar {
-  position: relative;
+  position: fixed;
   flex: 0 0 310px;
   display: flex;
-  justify-content: center;
-}
-.sidebar .container {
-  display: flex;
-  position: fixed;
   height: 100%;
+  left: 0;
   flex-direction: column;
   justify-content: space-between;
-  padding: 2rem 0 0 ;
+  padding: 2rem 1rem 0;
 }
