--- a/src/style/main.css
+++ b/src/style/main.css
@@ -114,8 +114,16 @@ body {
 .tweet-title-author {
   font-size: 1rem;
 }
+.tweet-title-author a {
+  color: inherit;
+  text-decoration: inherit;
+}
 .tweet-title-details {
   color: #6e767d;
+}
+.tweet-title-details a {
+  color: inherit;
+  text-decoration: inherit;
 }
 .tweet-text {
   color: #d9d9d9;
