--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,9 +5,11 @@
   background-color: #1d9bf0;
   color: white;
   font-size: 1rem;
-  text-align: center;
   cursor: pointer;
   padding: 0.7rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .button.type2 {
   padding: 1rem 0;
@@ -22,6 +24,7 @@
   color: white;
   border: 2px solid white;
   font-weight: 700;
+  padding: 0.7rem;
 }
 
 /* ec442c 
