--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap");
 
-body {
+/* body {
   background-color: black;
   color: white;
   margin: 0 auto;
@@ -13,7 +13,7 @@ body {
   display: flex;
   justify-content: center;
   font-family: "Inter", sans-serif;
-}
+} */
 /* 
 .top-tweets {
   width: 1.5rem;
